--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-  
     <div class="container">
         <h1 class="title">Password Generator</h1>
 
@@ -35,13 +34,8 @@
         <label class="length-label">Password Length: <span id="lengthValue">12</span></label>
         <input type="range" id="length" min="6" max="20" value="12" class="length-range">
 
-        <button id="generateBtn" class="button generate-btn">
-            Generate Password
-        </button>
-
-        <button id="copyBtn" class="button copy-btn">
-            Copy to Clipboard
-        </button>
+        <button id="generateBtn" class="button generate-btn">Generate Password</button>
+        <button id="copyBtn" class="button copy-btn">Copy to Clipboard</button>
     </div>
 
     <script src="script.js"></script>
